<resources>
    <string name="app_name" translatable="false">My Heroes</string>
    <string name="title_activity_main" translatable="false">Dog Hero</string>

    <!--TODO: translate strings-->

    <string name="error">We are working on a fix to this right now!</string>
    <!--Estamos trabalhando em uma correção para isso agora!-->
    <string name="toast">We can\'t do that now, please try again later</string>
    <!--Não podemos fazer isso agora, por favor, tente novamente mais tarde-->

    <string name="title_search">Search</string>
    <!--Busca-->
    <string name="title_messages">Messages</string>
    <!--Mensagens-->
    <string name="title_heroes">Heroes</string>
    <!--Heróis-->
    <string name="title_reservations">Reservations</string>
    <!--Reservas-->
    <string name="title_profile">Profile</string>
    <!--Perfil-->

    <!--Heroes Fragment-->
    <string name="heroes_hosted_with">Heroes I\'ve hosted with</string>
    <!--Heróis com quem hospedei-->
    <string name="heroes_favorites">Favorite heroes</string>
    <!--Heróis favoritos-->
    <string name="hero_price_time">Per night</string>
    <!--Por noite-->
    <string name="hero_price_currency">$</string>
    <!--R$-->
    <string name="btn_book">Book again</string>
    <!--Reservar de novo-->
    <string name="btn_chat">Chat</string>
    <!--Conversar-->

    <!--Placeholders-->
    <string name="holder_hero_name" translatable="false">Nicholas</string>
    <string name="holder_hero_neighborhood" translatable="false">Alto da Mooca</string>
    <string name="holder_hero_ratings" translatable="false">(999)</string>
    <string name="holder_hero_price" translatable="false">999</string>

</resources>
