<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icon_search_vector_black"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/icon_message_vector_black"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_heroes"
        android:icon="@drawable/icon_like_border_vector_gray_battleship"
        android:title="@string/title_heroes" />

    <item
        android:id="@+id/navigation_reservations"
        android:icon="@drawable/icon_assignment_vector_black"
        android:title="@string/title_reservations" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_person_border_vector_black"
        android:title="@string/title_profile" />


</menu>
