<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="16dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/image_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--TODO: change placeholder img-->
        <!--TODO: circle img-->
        <ImageView
            android:id="@+id/hero_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/ic_launcher" />
        <!--TODO: superhero icon-->
        <ImageView
            android:id="@+id/hero_is_superhero"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/image_wrapper"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/hero_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holder_hero_name"
            android:textColor="@color/colorBlackMain"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hero_neighborhood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holder_hero_neighborhood"
            android:textColor="@color/colorBlackSub"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--TODO: ask what should go here-->
        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="2.5"
            android:stepSize="0.5"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holder_hero_ratings"
            android:textColor="@color/colorBlackSub"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ratingBar" />

        <!--TODO: implement favorite button behavior-->
        <ImageButton
            android:contentDescription="@string/heroes_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/icon_like_border_vector_gray_battleship" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_price_currency"
            android:textColor="@color/colorBlackMain"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/hero_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hero_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holder_hero_price"
            android:textColor="@color/colorBlackMain"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_price_time"
            android:textColor="@color/colorBlackSub"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <!--TODO: Add Buttons-->

</android.support.constraint.ConstraintLayout>